delete user path
